--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
            "src/Games/Even.php",
            "src/Games/Calc.php",
            "src/Games/Gcd.php",
+           "src/Games/Progression.php",
            "src/Engine.php"
                       
          ]
@@ -29,6 +30,7 @@
         "bin/brain-games",
         "bin/brain-even",
         "bin/brain-calc",
+        "bin/brain-progression",
         "bin/brain-gcd"
       ],
     "require-dev": {
