--- a/composer.json
+++ b/composer.json
@@ -12,9 +12,9 @@
            "src/Games/Calc.php",
            "src/Games/Gcd.php",
            "src/Games/Progression.php",
+           "src/Games/Prime.php",
            "src/Engine.php"
-                      
-         ]
+        ]
     },
     "authors": [
         {
@@ -31,7 +31,8 @@
         "bin/brain-even",
         "bin/brain-calc",
         "bin/brain-progression",
-        "bin/brain-gcd"
+        "bin/brain-gcd",
+        "bin/brain-prime"
       ],
     "require-dev": {
         "squizlabs/php_codesniffer": "^3.7"
